--- a/banquetBuddy/catering_owners/templates/offers/create_offer.html
+++ b/banquetBuddy/catering_owners/templates/offers/create_offer.html
@@ -45,22 +45,29 @@
 
 </style>
 <h1 style="margin-top: 5%;">Create new job offer</h1>
-    <div class="form">
-        <form action="{% url 'create_offer' %}" method="post">
-            {% csrf_token %}
-            <label for="id_title">Title:</label>
-            <input type="text" id="id_title" name="title" required><br>
+<div class="form">
+    <form action="{% url 'create_offer' %}" method="post">
+        {% csrf_token %}
+        <label for="id_catering_service">Catering Service:</label>
+        <select id="id_catering_service" name="catering_service">
+            {% for catering_service in catering_services %}
+                <option value="{{ catering_service.pk }}">{{ catering_service.name }}</option>
+            {% endfor %}
+        </select><br>
 
-            <label for="id_description">Description:</label>
-            <textarea id="id_description" name="description"  required></textarea><br>
+        <label for="id_title">Title:</label>
+        <input type="text" id="id_title" name="title" required><br>
 
-            <label for="id_requirements">Requirements:</label>
-            <textarea id="id_requirements" name="requirements"  required></textarea><br>
+        <label for="id_description">Description:</label>
+        <textarea id="id_description" name="description"  required></textarea><br>
 
-            <label for="id_location">Location:</label>
-            <input type="text" id="id_location" name="location" required><br>
+        <label for="id_requirements">Requirements:</label>
+        <textarea id="id_requirements" name="requirements"  required></textarea><br>
 
-            <input type="submit" value="Create offer">
-        </form>
-    </div>
+        <label for="id_location">Location:</label>
+        <input type="text" id="id_location" name="location" required><br>
+
+        <input type="submit" value="Create offer">
+    </form>
+</div>
 {% endblock %}
