--- a/banquetBuddy/catering_owners/templates/list_menus.html
+++ b/banquetBuddy/catering_owners/templates/list_menus.html
@@ -10,7 +10,7 @@
 
 {% if messages %}
 <div class="container mt-3">
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-success" id="messageAlert" role="alert">
         <ul class="list-unstyled mb-0">
             {% for message in messages %}
             <li class="{{ message.tags }}">{{ message }}</li>
@@ -18,6 +18,11 @@
         </ul>
     </div>
 </div>
+<script>
+    setTimeout(function() {
+        document.getElementById('messageAlert').style.display = 'none';
+    }, 4000); // 4 segundos
+</script>
 {% endif %}
 
 
