--- a/banquetBuddy/core/templates/core/home.html
+++ b/banquetBuddy/core/templates/core/home.html
@@ -29,6 +29,33 @@
   </form>
         {% endif %}      
     </div>
+    <div class="container mt-4">
+        {% if request.user.is_authenticated and request.user.EmployeeUsername %}
+        <form
+    method="post"
+    action="{% url 'employeeOfferList' %}"
+    id="miFormulario"
+    class="mb-4"
+  >
+    {% csrf_token %}
+    <div class="input-group">
+      <input
+        type="text"
+        class="form-control bg-light border-0 small"
+        placeholder="Search..."
+        id="search"
+        name="search"
+        value="{{ search }}"
+      />
+      <div class="input-group-append">
+        <button class="btn btn-primary  mb-3" type="submit">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </button>
+      </div>
+    </div>
+  </form>
+        {% endif %}      
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
