--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -23,11 +23,9 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     {% if request.user.is_authenticated %}
-                        {% if is_particular %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="/caterings">Caterings</a>
-                            </li>
-                        {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/caterings">Caterings</a>
+                    </li>
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
@@ -38,10 +36,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Calendar</a>
                     </li>
+                    {% if request.user.is_authenticated and request.user.CateringCompanyusername %}
                     <li class="nav-item">
                         <a class="nav-link" href={% url 'offer_list' %}>Offers</a>
                     </li>
-
+                    {% endif %}
                     {% if request.user.is_authenticated and request.user.EmployeeUsername %}
                     <li class="nav-item">
                         <a class="nav-link" href="/employeeOfferList">Offers</a>
