--- a/banquetBuddy/catering_particular/templates/book_edit.html
+++ b/banquetBuddy/catering_particular/templates/book_edit.html
@@ -33,7 +33,7 @@
         <div class="form-group">
             <label for="menu">Select Menu:</label>
             <div class="row">
-              {% for menu in menus %}
+                {% for menu in menus %}
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 d-flex flex-column shadow-sm custom-card-bg">
                         <div class="card-body flex-fill d-flex flex-column">
@@ -41,15 +41,15 @@
                             <p class="card-text">{{ menu.description }}</p>
                             <div class="mt-auto">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-success select-menu" data-menu-id="{{ menu.id }}">Select</button>
+                                    <button type="button" class="btn btn-sm btn-outline-success select-menu {% if event.menu_id == menu.id %}selected{% endif %}" data-menu-id="{{ menu.id }}">Select</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 {% endfor %}
-                <input type="hidden" name="selected_menu" id="selected_menu">
-              </div>
+                <input type="hidden" name="selected_menu" id="selected_menu" value="{{ event.menu_id }}">
+            </div>
             </br>
         </div>
 
