feat: New camps added to the error report form

--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -85,6 +85,12 @@
                         <p class="text-white text-lg">Contact</p>
                         <i class="fas fa-envelope icon-lg"></i>
                     </a>
+                </div>
+                <div class="col contact-container text-center">
+                    <a href="/error-report" class="text-decoration-none">
+                        <p class="text-white text-lg">Report Error</p>
+                        <i class="fas fa-exclamation icon-lg"></i>
+                    </a>
                 </div> 
                 <div class="col about-us-container text-center">
                     <a href="/about-us" class="text-decoration-none">
