--- a/banquetBuddy/core/templates/core/error_report.html
+++ b/banquetBuddy/core/templates/core/error_report.html
@@ -8,24 +8,70 @@
     <title>Reportar Error</title>
     <!-- Agrega el enlace al archivo CSS de Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .error-report-container {
+            margin-top: 50px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+        }
+        h2 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        label {
+            font-weight: bold;
+        }
+        textarea {
+            resize: none;
+        }
+        button[type="submit"] {
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
+        <div class="error-report-container"> 
         <h2>Reportar Error</h2>
         <form method="post">
             {% csrf_token %}
-            <!-- Nombre -->
+            <!-- Name -->
             <div class="form-group">
-                <label for="id_nombre">Nombre:</label>
+                <label for="id_nombre">Name:</label>
                 <input type="text" class="form-control" id="id_nombre" name="name" required>
             </div>
-            <!-- Mensaje -->
+            <!-- Surname -->
             <div class="form-group">
-                <label for="id_mensaje">Mensaje:</label>
+                <label for="id_surname">Surname:</label>
+                <input type="text" class="form-control" id="id_surname" name="surname" required>
+            </div>
+            <!-- Email -->
+            <div class="form-group">
+                <label for="id_reporter_email">Email:</label>
+                <input type="email" class="form-control" id="id_reporter_email" name="reporter_email" required>
+            </div>
+            <label for="id_error_type">Error Type:</label>
+            <div class="form-group">
+                
+                <select id="id_error_type" name="error_type">
+                    {% for choice in form.error_type.field.choices %}
+                    <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <!-- Message -->
+            <div class="form-group">
+                <label for="id_mensaje">Observations:</label>
                 <textarea class="form-control" id="id_mensaje" name="message" rows="4" required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+    </div>
     </div>
     <!-- Agrega el enlace al archivo JavaScript de Bootstrap -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
