--- a/banquetBuddy/core/templates/core/registro_empleado.html
+++ b/banquetBuddy/core/templates/core/registro_empleado.html
@@ -45,59 +45,67 @@
     font-size: 12px; /* Tamaño de la fuente más pequeño */
   }
 </style>
-<body>
-  <div class="container mt-4 mb-4">
-    <div
-      class="row d-flex align-items-center justify-content-center"
-      style="height: 80vh"
-    >
-      <div class="col-md-7 mx-auto">
-        <div class="register-form">
-          <h2 class="register-heading"><u>Sign Up</u></h2>
-          <form method="post">
-            {% csrf_token %}
-            <div class="row">
-              <div class="col-md-6">
-                {% for field in user_form %}
-                <div class="form-group">
-                  <input
-                    type="{{ field.field.widget.input_type }}"
-                    name="{{ field.html_name }}"
-                    placeholder="{{ field.label }}"
-                    class="rounded-input {% if field.errors %}is-invalid{% endif %}"
-                    value="{% if field.value %}{{ field.value }}{% endif %}"
-                    required
-                  />
-                  {% for error in field.errors %}
-                  <div class="alert alert-danger">{{ error }}</div>
-                  {% endfor %}
-                </div>
+
+<div class="container mt-4 mb-4">
+  <div class="row d-flex align-items-center justify-content-center" style="height: 80vh">
+    <div class="col-md-7 mx-auto">
+      <div class="register-form">
+        <h2 class="register-heading"><u>Sign Up</u></h2>
+        {% if messages %}
+          {% for message in messages %}
+            {% if message.tags == 'error' %}
+              <div class="alert alert-danger text-center" role="alert">
+                {{ message }}
+              </div>
+            {% endif %}
+          {% endfor %}
+        {% endif %}
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="row">
+            <div class="col-md-6">
+              {% for field in user_form %}
+              <div class="form-group">
+                <input
+                  type="{{ field.field.widget.input_type }}"
+                  name="{{ field.html_name }}"
+                  placeholder="{{ field.label }}"
+                  class="rounded-input {% if field.errors %}is-invalid{% endif %}"
+                  value="{% if field.value %}{{ field.value }}{% endif %}"
+                  required
+                />
+                {% for error in field.errors %}
+                <div class="alert alert-danger">{{ error }}</div>
                 {% endfor %}
               </div>
-              <div class="col-md-6">
-                {% for field in employee_form %}
-                <div class="form-group">
-                  <input
-                    type="{{ field.field.widget.input_type }}"
-                    name="{{ field.html_name }}"
-                    placeholder="{{ field.label }}"
-                    class="rounded-input {% if field.errors %}is-invalid{% endif %}"
-                    value="{% if field.value %}{{ field.value }}{% endif %}"
-                    required
-                  />
-                  {% for error in field.errors %}
-                  <div class="alert alert-danger">{{ error }}</div>
-                  {% endfor %}
-                </div>
-                {% endfor %}
-              </div>
+              {% endfor %}
             </div>
-            <button type="submit" class="btn btn-primary">Sign Up</button>
-          </form>
-        </div>
+            <div class="col-md-6">
+              {% for field in employee_form %}
+              <div class="form-group">
+                {% if field.html_name == 'curriculum' %}
+                <label for="{{ field.html_name }}">Currículum:</label>
+                {% endif %}
+                <input
+                  type="{{ field.field.widget.input_type }}"
+                  name="{{ field.html_name }}"
+                  placeholder="{{ field.label }}"
+                  class="rounded-input {% if field.errors %}is-invalid{% endif %}"
+                  value="{% if field.value %}{{ field.value }}{% endif %}"
+                  {% if field.html_name != 'curriculum' %}required{% endif %}
+                />
+                {% for error in field.errors %}
+                <div class="alert alert-danger">{{ error }}</div>
+                {% endfor %}
+              </div>
+              {% endfor %}
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Sign Up</button>
+        </form>
       </div>
     </div>
   </div>
-</body>
+</div>
 
 {% endblock %}
