test: All report error's tests implemented

--- a/banquetBuddy/core/templates/core/error_report.html
+++ b/banquetBuddy/core/templates/core/error_report.html
@@ -37,7 +37,7 @@
 <body>
     <div class="container">
         <div class="error-report-container"> 
-        <h2>Reportar Error</h2>
+        <h2>Report Error</h2>
         <form method="post">
             {% csrf_token %}
             <!-- Name -->
