fix:access calendar through header + few tweaks

--- a/banquetBuddy/catering_owners/templates/calendar.html
+++ b/banquetBuddy/catering_owners/templates/calendar.html
@@ -38,6 +38,8 @@
             </tr>
         {% endfor %}
       </table>
+      <p>Next Event: {{ next_event_date }}</p>
+      <p>Number of events this month: {{ num_events }}</p>
 </body>
 </html>
 {% endblock %}
