--- a/banquetBuddy/core/templates/core/subscriptionsplans.html
+++ b/banquetBuddy/core/templates/core/subscriptionsplans.html
@@ -46,6 +46,18 @@
     }
 
 </style>
+{% if messages %}
+<div class="container mt-3">
+    <div class="alert alert-success" id="messageAlert" role="alert">
+        <ul class="list-unstyled mb-0">
+            {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
+{% endif %}
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
