--- a/banquetBuddy/catering_owners/templates/list_menus.html
+++ b/banquetBuddy/catering_owners/templates/list_menus.html
@@ -4,7 +4,7 @@
 
 <style>
     .custom-border {
-        border-color: rgb(4, 101, 4) !important; /* Cambia el color verde aquí */
+        border-color: #02483E !important; /* Cambia el color verde aquí */
     }
 </style>
 
@@ -28,12 +28,12 @@
 
 
 <div class="container mt-5">
-    <h2 class="mb-4 text-center" style="color: rgb(4, 101, 4); font-family: 'Merriweather', sans-serif; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">My Menus</h2>
+    <h2 class="mb-4 text-center" style="color: #02483E; font-family: 'Merriweather', sans-serif; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">My Menus</h2>
     
     <div class="row justify-content-end mb-4">
         <div class="col-md-2">
             <a href="{% url 'add_menu' %}" class="text-decoration-none">
-                <button class="btn btn-success btn-block" style="background-color: rgb(4, 101, 4);">
+                <button class="btn btn-success btn-block" style="background-color: #02483E;">
                     <i class="bi bi-plus-circle"></i> Add menu
                 </button>
             </a>
@@ -45,7 +45,7 @@
         <div class="col-md-4 mb-4">
             <div class="card rounded-3 border custom-border">
                 <div class="card-body">
-                    <h5 class="card-title" style="color: rgb(4, 101, 4);">{{ menu.name }}</h5>
+                    <h5 class="card-title" style="color: #02483E;">{{ menu.name }}</h5>
                     <p class="card-text">{{ menu.description }}</p>
                 </div>
                 <div class="card-footer">
@@ -70,7 +70,7 @@
     <div class="row justify-content-end mt-3 mb-4">
         <div class="col-md-2">
             <a href="{% url 'add_menu' %}" class="text-decoration-none">
-                <button class="btn btn-success btn-block" style="background-color: rgb(4, 101, 4);">
+                <button class="btn btn-success btn-block" style="background-color: #02483E">
                     <i class="bi bi-plus-circle"></i> Add menu
                 </button>
             </a>
