--- a/banquetBuddy/catering_owners/templates/reservations_for_day.html
+++ b/banquetBuddy/catering_owners/templates/reservations_for_day.html
@@ -1,20 +1,94 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-  <h1>Events for {{ selected_date.day}}/{{ selected_date.month}}/{{ selected_date.year}}</h1>
+<style>
+  body {
+            font-family:  Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333333;
+        }
+        h1 {
+            margin-top: 50px;
+            font-size: 45px;
+            color: #02483E;
+        }
+    .custom-card {
+        border: 1px solid #02483E;
+        border-radius: 0.5rem;
+        margin-bottom: 20px;
+    }
+    .custom-card .card-body {
+        padding: 20px;
+    }
+    .custom-card .card-title {
+        color: #02483E;
+        font-weight: bold;
+    }
+    .card-container {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    @media screen and (max-width: 600px) and (min-width: 451px) {
+            h1 {
+                font-size: 30px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+            }
+    }
+    @media screen and (max-width: 450px) {
+            h1 {
+                font-size: 24px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+            }
+    }
+    @media screen and (max-width: 600px) and (min-width: 451px) {
+            p {
+                font-size: 15px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+            }
+    }
+    @media screen and (max-width: 450px) {
+            p {
+                font-size: 12.5px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+            }
+    }
+    .field-name {
+      color: #02483E;
+      font-weight: bold;
+    }
+    .field-value {
+        margin-left: 20px;
+    }
+</style>
+
+<h1>Events for {{ selected_date.day }}/{{ selected_date.month }}/{{ selected_date.year }}</h1>
   
-  {% if reservations %}
-    <ul>
-      {% for reservation in reservations %}
-        <li>Name:{{ reservation.name }}</li>
-        <li>Date: {{ reservation.date }}</li>
-        <li>Details: {{ reservation.details }}</li>
-        <li>Booking State: {{ reservation.booking_state }}</li>
-        <li>Number of guests: {{ reservation.number_guests }}</li>
-        <hr>
-      {% endfor %}
-    </ul>
-  {% else %}
-    <p>No hay reservas para este día.</p>
-  {% endif %}
+{% if reservations %}
+<div class="card-container">
+    <div class="row">
+        {% for reservation in reservations %}
+        <div class="col-md-4">
+            <div class="card custom-card">
+                <div class="card-body">
+                    <h5 class="card-title">{{ reservation.name }}</h5>
+                    <p class="card-text"><span class="field-name">Fecha:</span> {{ reservation.date }}</p>
+                    <p class="card-text"><span class="field-name">Detalles:</span> {{ reservation.details }}</p>
+                    {% if reservation.booking_state == "CONTRACT_PENDING" %}
+                    <p class="card-text"><span class="field-name">Booking state:</span> Contract pending</p>
+                    {% else %}
+                    <p class="card-text"><span class="field-name">Booking state:</span> {{ reservation.booking_state }}</p>
+                    {% endif %}
+                    <p class="card-text"><span class="field-name">Número de invitados:</span> {{ reservation.number_guests }}</p>
+                </div>
+            </div>
+        </div>
+        {% if forloop.counter|divisibleby:3 and not forloop.last %}
+    </div>
+    <div class="row">
+        {% endif %}
+        {% endfor %}
+    </div>
+</div>
+{% else %}
+<p>No hay reservas para este día.</p>
+{% endif %}
 {% endblock %}
