--- a/banquetBuddy/catering_owners/templates/reservations.html
+++ b/banquetBuddy/catering_owners/templates/reservations.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Reservations</title>
+    <title>Event Bookings</title>
     <style>
         body {
             font-family:  Verdana, Geneva, Tahoma, sans-serif;
@@ -16,7 +16,7 @@
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
-            color: #333333;
+            color: #02483E;
         }
         h1 {
             margin-top: 50px;
@@ -79,7 +79,7 @@
 </head>
 <body>
 
-  <h1>Event Reservations</h1>
+  <h1>Event Bookings</h1>
 
   <div class="table-container">
     <table>
