--- a/banquetBuddy/catering_owners/templates/view_reservation.html
+++ b/banquetBuddy/catering_owners/templates/view_reservation.html
@@ -2,29 +2,85 @@
 {% load static %}
 
 {% block content %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Reservation</title>
+    <style>
+        .content-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            margin: 0;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        .content-container {
+            max-width: 600px;
+            width: 100%;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #02483E;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        li strong {
+            font-weight: bold;
+            margin-right: 10px;
+            color: #02483E;
+        }
+        @media screen and (max-width: 600px) and (min-width: 451px) {
+          h1 {
+              font-size: 30px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+          }
+        }
+        @media screen and (max-width: 450px) {
+          h1 {
+              font-size: 24px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+          }
+        }
+        @media screen and (max-width: 600px) and (min-width: 451px) {
+          li {
+              font-size: 15px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+          }
+        }
+        @media screen and (max-width: 450px) {
+          li {
+              font-size: 13px; /* Cambio de tamaño de fuente en dispositivos pequeños */
+          }
+        }
+    </style>
 </head>
 <body>
 
-  <h1>Reservation Details</h1>
-
-  <ul>
-    <li><strong>Name:</strong> {{ event.name }}</li>
-    <li><strong>Date:</strong> {{ event.date }}</li>
-    <li><strong>Details:</strong> {{ event.details }}</li>
-    <li><strong>Number of Guests:</strong> {{ event.number_guests }}</li>
-    <li><strong>Booking State:</strong> {{ event.booking_state }}</li>
-    <li><strong>Particular:</strong> {{ event.particular }}</li>
-
-  </ul>
+<div class="content-wrapper">
+    <div class="content-container">
+        <h1>Booking Details</h1>
+        <ul>
+            <li><strong>Name:</strong> {{ event.name }}</li>
+            <li><strong>Date:</strong> {{ event.date }}</li>
+            <li><strong>Details:</strong> {{ event.details }}</li>
+            <li><strong>Number of Guests:</strong> {{ event.number_guests }}</li>
+            <li><strong>Booking State:</strong> {{ event.booking_state }}</li>
+            <li><strong>Particular:</strong> {{ event.particular.user.first_name}} {{ event.particular.user.last_name }}</li>
+        </ul>
+    </div>
+</div>
 
 </body>
 </html>
-
 {% endblock %}
